--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -122,7 +122,7 @@
         instance_id: 'i-0f908f7d12edb09ea'
         #"{{ ec2_instance[0].instance.instance_id }}"
         region: "{{ region }}"
-        key_data: '{{ lookup("env", "window_private_key" ) }}'
+        key_file: '{{ lookup("env", "window_private_key" ) }}'
         wait: true
       register: password
 
