--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -25,6 +25,7 @@
     - name: Get EC2 key pair information
       amazon.aws.ec2_key:
         name: "{{ key_name }}"
+        region: "{{ region }}"
       register: key_pair_info
 
     - name: debug_1 
