--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -23,7 +23,7 @@
 
   tasks:
     - name: Get EC2 key pair information
-      amazon.aws.ec2_key:
+      amazon.aws.ec2_key_info:
         name: "{{ key_name }}"
         region: "{{ region }}"
       register: key_pair_info
@@ -32,7 +32,7 @@
       ansible.builtin.debug:
         msg: "Key pair info: {{ key_pair_info }}"
 
-    - name: debug_1 
+    - name: debug_2
       ansible.builtin.debug:
         msg: "Key pair key: {{ key_pair_info.key.private_key }}"
 
