try another way to get the password

--- a/windows_server_aws/aap/create_window_server_farms.yml
+++ b/windows_server_aws/aap/create_window_server_farms.yml
@@ -22,12 +22,12 @@
 # server_name: ""
 
   tasks:
-    - name: Create rsa key pair
-      amazon.aws.ec2_key:
-        name: "{{ key_name }}"
-        key_type: rsa
-        region: "{{ region }}"
-      register: rsa_key
+    # - name: Create rsa key pair
+    #   amazon.aws.ec2_key:
+    #     name: "{{ key_name }}"
+    #     key_type: rsa
+    #     region: "{{ region }}"
+    #   register: rsa_key
 
     # - name: debug__rsa_key
     #   ansible.builtin.debug:
@@ -124,27 +124,19 @@
       loop: "{{ server_name }}"
       register: ec2_instance
 
-    # - name: show instance
-    #   debug:
-    #     msg: "instance {{ ec2_instance.results[0].instances[0].instance_id }}"  
-
-    - name: Wait until instance is running
-      amazon.aws.ec2_instance_info:
-        instance_ids: ["{{ ec2_instance.results[0].instances[0].instance_id }}"]
-        region: "{{ region }}"
-      register: ec2_info
-      until: ec2_info.instances[0].state.name == "running"
-      retries: 20
-      delay: 15
-
-    - name: Get admin password
-      community.aws.ec2_win_password:
+    # - name: Get admin password
+    #   amazone.aws.ec2_get_password_data
+    #     instance_id: "{{ ec2_instance.results[0].instances[0].instance_id }}"
+    #     region: "{{ region }}"
+    #     key_data: '{{ lookup("env", "window_private_key" ) }}'
+    #     wait: true
+    #   register: password
+    - name: Retrieve password data
+      amazon.aws.ec2_get_password_data:
         instance_id: "{{ ec2_instance.results[0].instances[0].instance_id }}"
         region: "{{ region }}"
-        key_data: '{{ lookup("env", "window_private_key" ) }}'
-        wait: true
-      register: password
+    register: password_data
 
     - name: show password
       debug:
-        msg: "{{ password.win_password }}"  
+        msg: "{{ password_data }}"  
