--- a/windows_server_aws/delete_window_server_demo.yml
+++ b/windows_server_aws/delete_window_server_demo.yml
@@ -3,7 +3,7 @@
   hosts: localhost
 
   tasks:
-    - name: Get ec2 instance info for project "{{ project_name }}"
+    - name: Get ec2 instance info for project {{ project_name }}
       amazon.aws.ec2_instance_info:
         access_key: "{{ AWS_ACCESS_KEY_ID }}"
         secret_key: "{{ AWS_SECRET_KEY }}"
@@ -12,7 +12,7 @@
           "tag:Project": "{{ project_name }}"
       register: ec2_list
 
-    - name: Delete EC2 instance for project "{{ project_name }}"
+    - name: Delete EC2 instance for project {{ project_name }}
       amazon.aws.ec2_instance: 
         access_key: "{{ AWS_ACCESS_KEY_ID }}"
         secret_key: "{{ AWS_SECRET_KEY }}"
@@ -22,16 +22,25 @@
         wait: true
       with_items: "{{ ec2_list.instances }}"
 
-    - name: Get the vpc details for project "{{ project_name }}"
+    - name: Get the vpc details for project {{ project_name }}
       amazon.aws.ec2_vpc_net_info:
         access_key: "{{ AWS_ACCESS_KEY_ID }}"
         secret_key: "{{ AWS_SECRET_KEY }}"
         region: "{{ region }}"
         filters:
-          "tag:Project": "{{ project_name }}"
+          "tag:project": "{{ project_name }}"
       register: all_vpcs
 
-    - name: Delete Route Table for project "{{ project_name }}"
+    - name: Delete Subnet for project {{ project_name }}
+      amazon.aws.ec2_vpc_subnet:
+        access_key: "{{ AWS_ACCESS_KEY_ID }}"
+        secret_key: "{{ AWS_SECRET_KEY }}"
+        region: "{{ region }}"
+        vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
+        cidr: "{{ subnet_cidr_block }}"
+        state: absent
+
+    - name: Delete Route Table for project {{ project_name }}
       amazon.aws.ec2_vpc_route_table:
         access_key: "{{ AWS_ACCESS_KEY_ID }}"
         secret_key: "{{ AWS_SECRET_KEY }}"
@@ -41,25 +50,16 @@
           name: "{{ routigTable_name }}"
         state: absent
 
-    - name: Delete internet gateway for project "{{ project_name }}"
+    - name: Delete internet gateway for project {{ project_name }}
       amazon.aws.ec2_vpc_igw:
         access_key: "{{ AWS_ACCESS_KEY_ID }}"
         secret_key: "{{ AWS_SECRET_KEY }}"
         region: "{{ region }}"
         vpc_id: "{{ item.vpc_id }}"
         state: absent
-      loop: '{{ all_vpcs.vpcs }}'
+      loop: "{{ all_vpcs.vpcs }}"
 
-    - name: Delete Subnet for project "{{ project_name }}"
-      amazon.aws.ec2_vpc_subnet:
-        access_key: "{{ AWS_ACCESS_KEY_ID }}"
-        secret_key: "{{ AWS_SECRET_KEY }}"
-        region: "{{ region }}"
-        vpc_id: "{{ all_vpcs.vpcs[0].vpc_id }}"
-        cidr: "{{ subnet_cidr_block }}"
-        state: absent
-
-    - name: Gather information about all Security Groups for project "{{ project_name }}"
+    - name: Gather information about all Security Groups for project {{ project_name }}
       amazon.aws.ec2_group_info:
         access_key: "{{ AWS_ACCESS_KEY_ID }}"
         secret_key: "{{ AWS_SECRET_KEY }}"
