Add security update script

--- a/windows_server_aws/install_security_update.yml
+++ b/windows_server_aws/install_security_update.yml
@@ -1,10 +1,10 @@
 ---
-- name: Install firefox with chocolatey
+- name: Install all security, critical, and rollup updates without a scheduled task
   hosts: all
   gather_facts: no
 
   tasks:
-    - name: Install all security, critical, and rollup updates without a scheduled task
+    - name: Install all security, critical, and rollup updates
       ansible.windows.win_updates:
         category_names:
           - SecurityUpdates
