change the search update playbook and readme

--- a/windows_server_aws/search_win_update.yml
+++ b/windows_server_aws/search_win_update.yml
@@ -1,11 +1,12 @@
 ---
-- name: windows server patching
+- name: Check for Windows Updates
   gather_facts: no
   hosts: all
-  tasks:
 
-    - name: Check for missing updates
-      win_updates:
+  tasks:
+    - name: Check for available updates
+      ansible.windows.win_updates:
+        category_names: '*'  # Check all categories
         state: searched
         log_path: C:\ansible_wu.txt
       register: update_results
@@ -17,3 +18,17 @@
           {% for k in update_results.updates %}
           {{ update_results.updates[k].title }}
           {% endfor %}
+
+# - name: Check for Windows Updates
+#   hosts: your_windows_hosts
+#   tasks:
+#     - name: Check for available updates
+#       ansible.windows.win_updates:
+#         category_names: '*'  # Check all update categories
+#         reboot: yes         # Automatically reboot if needed
+#         reboot_timeout: 600 # Reboot timeout in seconds
+#       register: update_result
+
+#     - name: Print update results
+#       debug:
+#         var: update_result
