add jmeshpath to the execution environment

--- a/exec-environment/windows_ee/execution-environment.yml
+++ b/exec-environment/windows_ee/execution-environment.yml
@@ -20,6 +20,7 @@ dependencies:
     - pykerberos
     - six
     - psutil
+    - jmespath
   system: bindep.txt
 additional_build_files:
     - src: ansible.cfg
