--- a/windows_server_aws/install_win_update.yml
+++ b/windows_server_aws/install_win_update.yml
@@ -11,6 +11,10 @@
       - DefinitionUpdates
 
   pre_tasks:
+    - name: Show all facts
+      ansible.builtin.debug:
+        var: ansible_facts
+
     - name: Disable monitoring for selected hosts
       ansible.builtin.debug:
         msg: "We need to stop monitoring for these host in Dynatrace: {{ inventory_hostname }} is {{ ansible_default_ipv4.address }}"
