--- a/windows_server_aws/install_win_update.yml
+++ b/windows_server_aws/install_win_update.yml
@@ -17,7 +17,7 @@
 
     - name: Disable monitoring for selected hosts
       ansible.builtin.debug:
-        msg: "We need to stop monitoring for these host in Dynatrace: {{ inventory_hostname }} is {{ ansible_default_ipv4.address }}"
+        msg: "We need to stop monitoring for these host in Dynatrace: {{ inventory_hostname }} is {{ ansible_facts.ip_addresses[1] }}"
 
   tasks:
     # see 
